# nfx-stringutils

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_CharacterClassification.cpp  BM_NetworkValidation.cpp  BM_NumericParsing.cpp  BM_Splitter.cpp  BM_StringComparison.cpp  BM_StringOperations.cpp  BM_StringTransform.cpp  BM_StringValidation.cpp  BM_Utils.cpp  CMakeLists.txt  README.md
cmake/: nfx-stringutils-config.cmake.in  nfxStringUtilsBuildConfig.cmake  nfxStringUtilsDependencies.cmake  nfxStringUtilsInstall.cmake  nfxStringUtilsPackaging.cmake  nfxStringUtilsTarget.cmake
doc/: CMakeLists.txt
include/nfx/: StringUtils.h
include/nfx/detail/string/: Splitter.inl  Utils.inl
include/nfx/string/: Splitter.h  Utils.h
samples/: CMakeLists.txt  Sample_Network.cpp  Sample_StringBasics.cpp  Sample_StringComparison.cpp  Sample_StringEncoding.cpp  Sample_StringFormatting.cpp  Sample_StringOperations.cpp  Sample_StringPredicates.cpp  Sample_StringSplitter.cpp  Sample_Unicode.cpp
test/: CMakeLists.txt  TESTS_CharacterClassification.cpp  TESTS_CharacterRemoval.cpp  TESTS_EdgeCases.cpp  TESTS_EscapeUnescape.cpp  TESTS_FormatValidation.cpp  TESTS_NetworkValidation.cpp  TESTS_PredicateOperations.cpp  TESTS_StringComparison.cpp  TESTS_StringFormatting.cpp  TESTS_StringNumericParsing.cpp  TESTS_StringOperations.cpp  TESTS_StringSplitter.cpp  TESTS_StringUtils.cpp  TESTS_StringValidation.cpp  TESTS_SubstringExtraction.cpp  TESTS_UrlEncoding.cpp  Tests_CharacterClassification.cpp  Tests_CharacterRemoval.cpp  Tests_EdgeCases.cpp  Tests_EscapeUnescape.cpp  Tests_FormatValidation.cpp  Tests_NetworkValidation.cpp  Tests_PredicateOperations.cpp  Tests_StringComparison.cpp  Tests_StringFormatting.cpp  Tests_StringNumericParsing.cpp  Tests_StringOperations.cpp  Tests_StringSplitter.cpp  Tests_StringValidation.cpp  Tests_SubstringExtraction.cpp  Tests_UrlEncoding.cpp
